cap width of dropdowns to avoid horizontal overflow

--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,7 @@
 .dropdown-menu {
     max-height:50vh;
-    overflow-y:auto;
+    max-width:85vw;
+    overflow:auto;
 }
 .jumbotron {
     border-radius: 0;
